--- a/style.css
+++ b/style.css
@@ -1,1 +1,380 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+
+:root{
+    --primary-color:#8c21f0;
+}
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+html,
+body{
+    font-family: 'Poppins',sans-serif;
+    line-height: 1.6;
+    scroll-behavior:smooth;
+}
+/* General */
+section{
+    min-height: 600px;
+}
+.container{
+    max-width: 1100px;
+    margin:0 auto;
+    padding:0 30px;
+}
+.header .container{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo h1{
+    font-size: 32px;
+    color:var(--primary-color);
+}
+ul{
+    list-style-type: none;
+}
+ul li{
+    display: inline-block;
+}
+ul li a{
+    text-decoration: none;
+    color:#000;
+    font-size: 18px;
+    padding:10px;
+    transition: all 0.3s ease;
+}
+ul li a:hover{
+    color:var(--primary-color)
+}
+.hr{
+    border:2px solid var(--primary-color);
+    padding:5px 10px;
+    border-radius: 11px;
+    transition: all 0.3s ease;
+}
+.hr:hover{
+    background:var(--primary-color);
+    color:#fff;
+}
+
+/* showcase */
+.showcase{
+    background:#faf7fc;
+}
+.showcase .left h3{
+    font-size: 20px;
+}
+.left h1{
+    font-family: Tahoma;
+    font-size: 56px;
+    font-weight: 600;
+}
+.showcase .container{
+    display: flex;
+    align-items: center;
+}
+.left p{
+    font-size: 16px;
+    margin:10px 0;
+}
+.left .btn{
+    text-decoration: none;
+    color:#000;
+    display:inline-block;
+    padding:6px 17px;
+    background:var(--primary-color);
+    color:#fff;
+    font-size: 18px;
+    border-radius: 6px;
+    text-transform: uppercase;
+    margin-top:10px;
+    margin-right: 10px;
+    transition: all 0.3s ease;
+    border:2px solid var(--primary-color);
+}
+.left .btn.cv{
+    background:none;
+    color:#000;
+}
+.me:hover{
+    background:none;
+    color:#000;
+}
+.left .cv:hover{
+    background:var(--primary-color);
+    color:#fff;
+}
+.right{
+    width:500px;
+}
+.right img{
+    width:100%;
+}
+
+/* Specilizing */
+.title-name h1{
+    text-align: center;
+    font-size: 32px;
+    margin:10px 0;
+    margin-bottom: 30px;
+}
+.special-content{
+    display: flex;
+    flex-wrap: wrap;
+}
+.special-content .box{
+    margin:5px;
+    width:30%;
+    padding:25px 20px;
+    border-radius: 10px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+.special-content .box i{
+    font-size: 50px;
+    margin-bottom: 20px;
+    color:var(--primary-color);
+}
+.box .name{
+    font-size: 22px;
+    font-weight: 500;
+}
+.box p{
+    font-size: 16px;
+    margin:8px 0;
+}
+.box.sp{
+    background:var(--primary-color);
+    color:#fff;
+}
+.box.sp i{
+    color:#fff;
+}
+.box .card{
+    transition: all 0.3s ease;
+}
+.special-content .box:hover .card{
+    transform:scale(1.05);
+    color:#fff;
+}
+.special-content .box:hover{
+    background:var(--primary-color);
+}
+.box:hover i{
+    color:#fff;
+}
+
+/* Portfolio */
+.topic{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+.topic button{
+    border:none;
+    margin-right: 10px;
+    padding:7px 12px;
+    border-radius: 8px;
+    margin-top: 8px;
+    font-size: 17px;
+
+}
+button.np{
+    background:var(--primary-color);
+    color:#fff;
+}
+.portfolio-content{
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+.image-box .card{
+    width:100%;
+    height: 100%;
+}
+.image-box{
+    width:32%;
+    height: 200px;
+    margin:5px 0;
+    overflow: hidden;
+}
+.image-box .card{
+    transition: all 0.3s ease;
+}
+.image-box:hover .card{
+    transform: scale(1.05);
+}
+.image-box img{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Testmonials */
+section.testmonials{
+    background:var(--primary-color);
+    color:#fff;
+}
+.title-name h1{
+    padding-top: 20px;
+}
+.test-content{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top:100px;
+}
+.box img{
+    width:100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-top: -60px;
+}
+.test-content .box{
+    background:#6d08cc;
+    padding:20px;
+    text-align: center;
+    width:32%;
+    border-radius: 10px;
+}
+.test-content .box p{
+    letter-spacing: 1px;
+    font-size: 15px;
+    font-weight: lighter;
+}
+.box small{
+    font-size: 17px;
+}
+
+/* Contact */
+
+.contact .left h3{
+    font-size: 25px;
+    font-weight: 500;
+}
+.contact .left p{
+    margin:10px 0;
+}
+.contact .left .info{
+    display: flex;
+    align-items: center;
+}
+.contact .left i{
+    color: var(--primary-color);
+    font-size: 25px;
+    margin:14px 0;
+    margin-right: 15px;
+}
+.title .main-title{
+    font-weight: 500;
+}
+.title .sub-title{
+    font-size: 13px;
+}
+.contact .contact-content{
+    display: flex;
+    justify-content: space-between;
+}
+form .input-field{
+    display: flex;
+}
+form .field{
+    height: 45px;
+    border:2px solid #000;
+    border-radius: 6px;
+    width:100%;
+    font-size: 17px;
+    margin-right: 10px;
+    overflow: hidden;
+    margin-bottom: 15px;
+}
+form .field input{
+    height:100%;
+    width: 100%;
+    border-radius: 6px;
+    border:none;
+    outline:none;
+    padding-left: 10px;
+}
+form .txt{
+    height: auto;
+}
+form textarea{
+    width:100%;
+    outline: none;
+    padding:10px;
+    resize: none;
+    border:none;
+    font-size: 17px;
+}
+.right h2{
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+form .send{
+    background:var(--primary-color);
+    color:#fff;
+    padding:10px 15px;
+    display: inline-block;
+    font-size: 18px;
+    border:2px solid var(--primary-color);
+    border-radius: 6px;
+    transition: all 0.3s ease;
+}
+.send:hover{
+    background:none;
+    color:var(--primary-color);
+}
+
+footer{
+    background:var(--primary-color);
+    color:#fff;
+    text-align: center;
+    font-size: 18px;
+    padding:10px;
+}
+
+/* responsive */
+@media only screen and (max-width:1050px){
+    .left h1{
+        font-size: 49px;
+    }
+}
+@media only screen and (max-width:930px){
+    .header .container{
+        flex-direction: column;
+    }
+    .hr{
+        display:none;
+    }
+    .showcase .container{
+        flex-direction: column;
+    }
+    .showcase .left{
+        margin-top:30px;
+    }
+    .special-content .box{
+        width: 100%;
+        flex-direction: column;
+    }
+    .image-box{
+        width:49%;
+    }
+    .test-content .box{
+        width:100%;
+        margin:20px;
+    }
+    .contact .contact-content{
+        flex-direction: column;
+    }
+    .contact .right{
+        margin:40px 0;
+    }
+
+}
